<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_credits"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical" >
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:padding="20dp"
        android:background="@drawable/card"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:id="@+id/daniel_card"/>
	<mx.danigarciaalva.tweetnow.ImageViewRounded 
	    android:src="@drawable/daniel"
	    android:contentDescription="@string/daniel"
	    android:layout_width="80dp"
	    android:background="@drawable/cards_style"
	    android:layout_height="80dp"
	    android:layout_alignTop="@id/daniel_card"
	    android:layout_centerHorizontal="true"
	    android:scaleType="centerCrop"
	    android:id="@+id/daniel_image"
	    android:layout_margin="10dp"/>
	<TextView 
	    android:text="@string/development"
	    android:id="@+id/title_development"
	    android:layout_below="@id/daniel_image"
	    android:layout_width="wrap_content"
	    android:textStyle="bold"
	    android:layout_centerHorizontal="true"
	    android:layout_height="wrap_content"/>
	<TextView 
	    android:text="@string/daniel"
	    android:layout_centerHorizontal="true"
	    android:layout_width="wrap_content"
	    android:layout_below="@id/title_development"
	    android:layout_height="wrap_content"
	    android:id="@+id/daniel_name"/>
	
	<View 
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="50dp"
        android:background="@drawable/card"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/daniel_card"
        android:layout_margin="10dp"
        android:id="@+id/diego_card"/>
	<mx.danigarciaalva.tweetnow.ImageViewRounded
	    android:src="@drawable/diego"
	    android:contentDescription="@string/diego"
	    android:layout_width="80dp"
	    android:background="@drawable/cards_style"
	    android:layout_height="80dp"
	    android:layout_alignTop="@id/diego_card"
	    android:layout_centerHorizontal="true"
	    android:scaleType="centerCrop"
	    android:id="@+id/diego_image"
	    android:layout_margin="10dp"/>
	<TextView 
	    android:text="@string/design"
	    android:id="@+id/title_design"
	    android:layout_below="@id/diego_image"
	    android:layout_width="wrap_content"
	    android:textStyle="bold"
	    android:layout_centerHorizontal="true"
	    android:layout_height="wrap_content"/>
	<TextView 
	    android:text="@string/diego"
	    android:layout_centerHorizontal="true"
	    android:layout_width="wrap_content"
	    android:layout_below="@id/title_design"
	    android:layout_height="wrap_content"
	    android:id="@+id/diego_name"/>
</RelativeLayout>
